--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </a>
           <a href="#" class="gallery-link" title="Order Now">
             <img src="./images/gallery-img-3.jpg" class="food-img" />
-            <h3 class="food-name">Hummus</h3>
+            <h3 class="food-name">Breakfast</h3>
             <p class="food-description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
               commodi possimus iure hic excepturi. Corporis!
